# quad-sim

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt
docs/: benchmark.json  benchmark.md
include/drone_sim/: quad_dynamics.hpp
launch/: sim.launch.py
scripts/: benchmark.py  evaluate_policy.py  pid_controller.py  quad_env.py  rerun_viz.py  rl_recovery_node.py  train_ppo.py
src/: drone_dynamics_node.cpp  mekf_node.cpp
src/drone_sim/: CMakeLists.txt  package.xml
src/drone_sim/launch/: rl_eval.launch.py
src/drone_sim/scripts/: pid_controller.py  quad_env.py  rerun_viz.py  rl_recovery_node.py  teleop_node.py  train_ppo.py
src/drone_sim/src/: bindings.cpp  drone_dynamics_node.cpp  imu_sim_node.cpp
