<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_sim</name>
  <version>0.1.0</version>
  <description>3D quadrotor simulator with hybrid classical + RL control</description>
  <maintainer email="goxuysal@icloud.com">Jeetrajsinh Gohil</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
